Fix: formatting alignment of button

--- a/public/style.css
+++ b/public/style.css
@@ -93,6 +93,7 @@ button {
   color: white;
   background-color: #211745;
   margin: 10px;
+  margin-top: 18px;
   margin-left: 0;
 }
 
